<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_add_24dp"
        android:title="@string/menu_item_add_config"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/import_qrcode"
                android:title="@string/menu_item_import_config_qrcode"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_clipboard"
                android:title="@string/menu_item_import_config_clipboard"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_manually_vmess"
                android:title="@string/menu_item_import_config_manually_vmess"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_manually_vless"
                android:title="@string/menu_item_import_config_manually_vless"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_manually_ss"
                android:title="@string/menu_item_import_config_manually_ss"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_manually_socks"
                android:title="@string/menu_item_import_config_manually_socks"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_manually_trojan"
                android:title="@string/menu_item_import_config_manually_trojan"
                app:showAsAction="never" />

            <item
                android:title="@string/menu_item_import_config_custom"
                app:showAsAction="always">
                <menu>
                    <item
                        android:id="@+id/import_config_custom_clipboard"
                        android:title="@string/menu_item_import_config_custom_clipboard"
                        app:showAsAction="never" />
                    <item
                        android:id="@+id/import_config_custom_local"
                        android:title="@string/menu_item_import_config_custom_local"
                        app:showAsAction="never" />
                    <item
                        android:id="@+id/import_config_custom_url"
                        android:title="@string/menu_item_import_config_custom_url"
                        app:showAsAction="never" />
                    <item
                        android:id="@+id/import_config_custom_url_scan"
                        android:title="@string/menu_item_import_config_custom_url_scan"
                        app:showAsAction="never" />
                </menu>
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/filter_config"
        android:icon="@drawable/ic_outline_filter_alt_24"
        android:title="@string/title_filter_config"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/service_restart"
        android:title="@string/title_service_restart"
        app:showAsAction="never" />
    <item
        android:id="@+id/del_all_config"
        android:icon="@drawable/ic_delete_24dp"
        android:title="@string/title_del_all_config"
        app:showAsAction="never" />
    <item
        android:id="@+id/del_duplicate_config"
        android:icon="@drawable/ic_delete_24dp"
        android:title="@string/title_del_duplicate_config"
        app:showAsAction="never" />
    <item
        android:id="@+id/del_invalid_config"
        android:icon="@drawable/ic_delete_24dp"
        android:title="@string/title_del_invalid_config"
        app:showAsAction="never" />
    <item
        android:id="@+id/export_all"
        android:icon="@drawable/ic_share_24dp"
        android:title="@string/title_export_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/ping_all"
        android:title="@string/title_ping_all_server"
        app:showAsAction="never" />
    <item
        android:id="@+id/real_ping_all"
        android:title="@string/title_real_ping_all_server"
        app:showAsAction="never" />
    <item
        android:id="@+id/sort_by_test_results"
        android:title="@string/title_sort_by_test_results"
        app:showAsAction="never" />
    <item
        android:id="@+id/sub_update"
        android:title="@string/title_sub_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/sub_custom_update"
        android:title="@string/title_sub_custom_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/sub_custom_set_update"
        android:title="@string/title_sub_custom_set_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/sub_free_update1"
        android:title="@string/title_sub_free1_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/sub_free_update2"
        android:title="@string/title_sub_free2_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/sub_free_update3"
        android:title="@string/title_sub_free3_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/sub_free_update4"
        android:title="@string/title_sub_free4_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/sub_free_update5"
        android:title="@string/title_sub_free5_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/sub_free_update6"
        android:title="@string/title_sub_free6_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/sub_free_update7"
        android:title="@string/title_sub_free7_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/sub_free_update8"
        android:title="@string/title_sub_free8_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/sub_free_update9"
        android:title="@string/title_sub_free9_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/sub_free_update10"
        android:title="@string/title_sub_free10_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/sub_free_update11"
        android:title="@string/title_sub_free11_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/sub_free_update12"
        android:title="@string/title_sub_free12_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/sub_free_update13"
        android:title="@string/title_sub_free13_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/sub_free_update14"
        android:title="@string/title_sub_free14_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/sub_free_update15"
        android:title="@string/title_sub_free15_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/sub_free_update16"
        android:title="@string/title_sub_free16_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/sub_free_update17"
        android:title="@string/title_sub_free17_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/sub_free_update18"
        android:title="@string/title_sub_free18_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/sub_free_update19"
        android:title="@string/title_sub_free19_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/sub_free_update20"
        android:title="@string/title_sub_free20_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/sub_free_update21"
        android:title="@string/title_sub_free21_update"
        app:showAsAction="never" />
</menu>